--- a/control
+++ b/control
@@ -1,11 +1,11 @@
-Package: com.gilesgc.cccalc
+Package: ai.paisseon.cccalc
 Name: CCCalc
 Depends: mobilesubstrate
-Version: 1.2.1
+Version: 2.0.2
 Architecture: iphoneos-arm
-Description: Turn your control center's calculator module into a real, working calculator
-Maintainer: gilesgc
-Author: gilesgc
-Section: Tweaks
-Depiction: https://gilesgc.github.io/repo/depictions/?p=com.gilesgc.cccalc
+Description: Turn the Calculator CC module into a working calculator
+Maintainer: gilesgc & paisseon
+Author: gilesgc & paisseon
+SileoDepiction: https://paisseon.github.io/info/cccalc.json
+Depiction: https://paisseon.github.io/info/cccalc.html
 Icon: https://gilesgc.github.io/repo/depictions/com.gilesgc.cccalc/cccalc-icon.png
